# bato-learning

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  compose.yaml  pyproject.toml
.claude/: settings.json
_team/: ARCHITECTURE.md  GAME_DESIGN.md  MODULES.md  MODULES_STATUS.md  SHARED.md
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_gamification.py  0003_quiz_kind_meta.py  0004_user_auth.py  0005_game_schema.py  0006_game_concepts.py
api/: Dockerfile  pyproject.toml
api/app/: main.py  settings.py  telemetry.py  worker.py
api/app/activities/: agent.py
api/app/routers/: anthropic_demo.py  langgraph_demo.py  temporal_demo.py
api/app/workflows/: audit.py
app/: __init__.py  db.py  logging_setup.py  main.py  settings.py  templating.py
app/content/: _HOWTO.md
app/middleware/: auth.py
app/models/: __init__.py  chat.py  content.py  game.py  gamification.py  progress.py  user.py
app/repos/: __init__.py  chat.py  game.py  gamification.py  modules.py  progress.py
app/routers/: __init__.py  auth.py  chat.py  exercises.py  game.py  pages.py  progress.py  quizzes.py
app/services/: __init__.py  auth.py  content_loader.py  content_loader_game.py  context_builder.py  deepseek_client.py  exercise_runner.py  gamification.py  glossary.py  tutor_filter.py
app/templates/: _layout.html  index.html  landing.html  module.html  progress.html
infra/hetzner/: README.md  compose.prod.yml
infra/traefik/: traefik.yml
scripts/: lint_track0_terms.py  seed.py
tests/: conftest.py  test_game_loader.py  test_smoke.py  test_tutor_filter.py
(+493 files in other folders)
