[project]
name = "bato-learning"
version = "0.1.0"
description = "Interactive full-stack guide for building AI agent products"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "jinja2>=3.1",
  "python-multipart>=0.0.20",
  "sqlalchemy[asyncio]>=2.0.36",
  "aiosqlite>=0.20",
  "alembic>=1.14",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "anthropic>=0.40",
  "openai>=1.50",
  "httpx>=0.27",
  "structlog>=24.4",
  "bcrypt>=4.0",
  "itsdangerous>=2.2",
  "pyyaml>=6.0",
  "python-frontmatter>=1.1",
  "markdown-it-py[plugins]>=3.0",
  "pygments>=2.18",
]

[tool.uv]
dev-dependencies = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.7",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
