[project]
name = "bato-learning-api"
version = "0.0.1"
description = "Live demo backend for bato-learning"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "anthropic>=0.40",
  "langgraph>=0.2.50",
  "langchain-anthropic>=0.3",
  "langchain-core>=0.3",
  "psycopg[binary,pool]>=3.2",
  "arq>=0.26",
  "temporalio>=1.7",
  "openinference-instrumentation-anthropic>=0.1",
  "openinference-instrumentation-langchain>=0.1",
  "opentelemetry-sdk>=1.27",
  "opentelemetry-exporter-otlp-proto-http>=1.27",
]

[tool.uv]
dev-dependencies = [
  "pytest>=8.3",
  "httpx>=0.27",
  "ruff>=0.7",
]
